lupdate: Fix incorrect usage of QChar(EOF)

Fixes: QTBUG-88710
Change-Id: Ibdff7d0bd0f768567b4df797f7837aee75f79a24
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>